infra/k8s/gateway-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: gcr.io/ticketing-333617/ticketing-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-srv
spec:
  selector:
    app: gateway
  ports:
    - name: gateway
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
