infra/k8s/ticketing-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/use-regex: 'true'
    #nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /auth
        #path: /auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 8080
      - path: /tickets
        pathType: Prefix
        backend:
          service:
            name: tickets-srv
            port:
              number: 8080
